PROD-9-26-19/force-app/main/default/objects/Activity/fields/Activity_Duration__c.field-meta.xml
<CustomField>
    <fullName>Activity_Duration__c</fullName>
    <description>Time spent preparing for lobbying (in hours)</description>
    <inlineHelpText>Time spent preparing for lobbying (in hours)</inlineHelpText>
    <label>Activity Duration</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>