PROD-9-26-19/force-app/main/default/objects/Activity/fields/Activity_Last_6_Months__c.field-meta.xml
<CustomField>
    <fullName>Activity_Last_6_Months__c</fullName>
    <description>ticks if the activity date is with in the last 180 days</description>
    <formula>IF( ActivityDate &gt; TODAY() - 181, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>ticks if the activity date is with in the last 180 days</inlineHelpText>
    <label>Activity Last 6 Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>