PROD-9-26-19/force-app/main/default/objects/Activity/fields/Activity_YTD__c.field-meta.xml
<CustomField>
    <fullName>Activity_YTD__c</fullName>
    <description>Ticks the box if the activity is this year to calculate number of meeting YTD</description>
    <formula>IF( or(
YEAR(ActivityDate) = YEAR(TODAY()),
YEAR(ActivityDate) = YEAR(TODAY()+1),
YEAR(ActivityDate) = YEAR(TODAY()+2),
YEAR(ActivityDate) = YEAR(TODAY()+3)),
1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Ticks the box if the activity is this year to calculate number of meeting YTD</inlineHelpText>
    <label>Activity YTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>