PROD-9-26-19/force-app/main/default/objects/Activity/fields/Candidates__c.field-meta.xml
<CustomField>
    <fullName>Candidates__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Candidates</label>
    <referenceTo>Candidates__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities_Candidate</relationshipName>
    <type>Lookup</type>
</CustomField>