PROD-9-26-19/force-app/main/default/objects/Activity/fields/Cases_Created__c.field-meta.xml
<CustomField>
    <fullName>Cases_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cases Created</label>
    <type>Checkbox</type>
</CustomField>