PROD-9-26-19/force-app/main/default/objects/Activity/fields/ContactName__c.field-meta.xml
<CustomField>
    <fullName>ContactName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>SS: 3-6-19: renamed Label and API : to Contact Name (Contact_Name__c) from  Public Official&#39;s Full Name	(Public_Official_s_Full_Name__c)	--Lookup(Contact)</description>
    <label>Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Pardot Activities</relationshipLabel>
    <relationshipName>Pardot_Activities</relationshipName>
    <type>Lookup</type>
</CustomField>