PROD-9-26-19/force-app/main/default/objects/Activity/fields/Expenses__c.field-meta.xml
<CustomField>
    <fullName>Expenses__c</fullName>
    <description>Total amount of expense for this meeting - create a detailed expense record as well</description>
    <inlineHelpText>Total amount of expense for this meeting - create a detailed expense record as well</inlineHelpText>
    <label>Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>