PROD-9-26-19/force-app/main/default/objects/Activity/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <label>ExternalID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>