PROD-9-26-19/force-app/main/default/objects/Activity/fields/First_Follow_on__c.field-meta.xml
<CustomField>
    <fullName>First_Follow_on__c</fullName>
    <description>To classify PFG task/event as first or follow-on</description>
    <inlineHelpText>To classify PFG task/event as first or follow-on</inlineHelpText>
    <label>First/Follow-on</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First</fullName>
            </value>
            <value>
                <fullName>Follow-on</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>