PROD-9-26-19/force-app/main/default/objects/Activity/fields/Greater_Than_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Greater_Than_Close_Date__c</fullName>
    <formula>ActivityDate &gt;=  Opportunity__r.Investment_Vehicle__r.Last_Closed_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Greater Than Close Date</label>
    <type>Checkbox</type>
</CustomField>