PROD-9-26-19/force-app/main/default/objects/Activity/fields/GT_30_Days__c.field-meta.xml
<CustomField>
    <fullName>GT_30_Days__c</fullName>
    <formula>IF (TODAY() - Account__r.LastActivityDate  &gt; 30, TRUE, FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>&gt; 30 Days</label>
    <type>Checkbox</type>
</CustomField>