PROD-9-26-19/force-app/main/default/objects/Activity/fields/Internal_Participants__c.field-meta.xml
<CustomField>
    <fullName>Internal_Participants__c</fullName>
    <description>To list the Brookfield team members that attended the meeting.</description>
    <inlineHelpText>To list the Brookfield team members that attended the meeting.  Please populate their FULL NAME as report filters will be used on this field.</inlineHelpText>
    <label>Internal Participants</label>
    <length>255</length>
    <type>Text</type>
</CustomField>