PROD-9-26-19/force-app/main/default/objects/Activity/fields/Latest_Activity__c.field-meta.xml
<CustomField>
    <fullName>Latest_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last IDI Gazeley Activity</label>
    <type>Checkbox</type>
</CustomField>