PROD-9-26-19/force-app/main/default/objects/Activity/fields/Left_Voice_Mail__c.field-meta.xml
<CustomField>
    <fullName>Left_Voice_Mail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggers new Task creation to follow up on the voice mail message.</description>
    <inlineHelpText>Triggers new Task creation to follow up on the voice mail message.</inlineHelpText>
    <label>Left Voice Mail</label>
    <type>Checkbox</type>
</CustomField>