PROD-9-26-19/force-app/main/default/objects/Activity/fields/Lobbying_Comments__c.field-meta.xml
<CustomField>
    <fullName>Lobbying_Comments__c</fullName>
    <description>Please summarize the Lobbying effort</description>
    <inlineHelpText>Please summarize the Lobbying effort</inlineHelpText>
    <label>Lobbying Comments</label>
    <type>TextArea</type>
</CustomField>