PROD-9-26-19/force-app/main/default/objects/Activity/fields/Name_ID__c.field-meta.xml
<CustomField>
    <fullName>Name_ID__c</fullName>
    <description>to pull the Name ID</description>
    <formula>WhoId</formula>
    <inlineHelpText>to pull the Name ID</inlineHelpText>
    <label>Name ID</label>
    <type>Text</type>
</CustomField>