PROD-9-26-19/force-app/main/default/objects/Activity/fields/Notes_Changed__c.field-meta.xml
<CustomField>
    <fullName>Notes_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checks true when Notes have been updated after meeting occurred.</description>
    <inlineHelpText>Checks true when Notes have been updated after meeting occurred.</inlineHelpText>
    <label>Notes Changed</label>
    <type>Checkbox</type>
</CustomField>