PROD-9-26-19/force-app/main/default/objects/Activity/fields/PFG_Activity_Formula__c.field-meta.xml
<CustomField>
    <fullName>PFG_Activity_Formula__c</fullName>
    <description>To track if the activity is for PFG</description>
    <formula>$RecordType.DeveloperName = &quot;PFG_event&quot; || $RecordType.DeveloperName = &quot;PFG_Task&quot;</formula>
    <inlineHelpText>To track if the activity is for PFG</inlineHelpText>
    <label>PFG Activity</label>
    <type>Checkbox</type>
</CustomField>