PROD-9-26-19/force-app/main/default/objects/Activity/fields/Report_Summaryxx__c.field-meta.xml
<CustomField>
    <fullName>Report_Summaryxx__c</fullName>
    <description>BRP</description>
    <label>*Report Summary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>