PROD-9-26-19/force-app/main/default/objects/Activity/fields/Sub_Interactive_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Interactive_Type__c</fullName>
    <description>Breakdown Interaction Type for reporting</description>
    <inlineHelpText>Breakdown Interaction Type for reporting</inlineHelpText>
    <label>Sub Interaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Interaction_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Introductory</fullName>
            </value>
            <value>
                <fullName>Onsite due diligence</fullName>
            </value>
            <value>
                <fullName>Investment committee</fullName>
            </value>
            <value>
                <fullName>Site tour</fullName>
            </value>
            <value>
                <fullName>Final presentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>