PROD-9-26-19/force-app/main/default/objects/Activity/listViews/BPREP_Meetings_Type_Clean_up.listView-meta.xml
<ListView>
    <fullName>BPREP_Meetings_Type_Clean_up</fullName>
    <columns>TASK.SUBJECT</columns>
    <columns>TASK.TYPE</columns>
    <columns>TASK.WHO_NAME</columns>
    <columns>TASK.WHAT_NAME</columns>
    <columns>TASK.DUE_DATE</columns>
    <columns>TASK.STATUS</columns>
    <columns>TASK.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>TASK.LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TASK.WHAT_NAME</field>
        <operation>contains</operation>
        <value>BPREP</value>
    </filters>
    <filters>
        <field>TASK.TYPE</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>TASK.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Event.PFG_event</value>
    </filters>
    <label>BPREP Meetings - Type Clean up</label>
    <sharedTo>
        <group>BPREP_PMT</group>
        <group>BREF_V_PMT</group>
    </sharedTo>
</ListView>